deploy_packages/cs2072/objects/QwikScore__c.object
<CustomObject>
    <description>Object to hold main types of scorecards.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this scorecard available to be taken?</description>
        <inlineHelpText>Is this scorecard available to be taken?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Score__c</fullName>
        <description>What is the average score for this scorecard?</description>
        <formula>TotalScore__c  / Completed_Surveys__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the average score for this scorecard?</inlineHelpText>
        <label>Average Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Completed_Surveys__c</fullName>
        <label>Completed Scorecards</label>
        <summaryFilterItems>
            <field>QwikScore_Scorecard__c.Scored__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QwikScore_Scorecard__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Display_Access__c</fullName>
        <description>This field controls who the survey is displayed for.   It assumes that each entry point to surveys can use this field in the where clause to display a list of eligible surveys</description>
        <inlineHelpText>Who has access to complete the survey</inlineHelpText>
        <label>Display_Access</label>
        <picklist>
            <picklistValues>
                <fullName>corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>patron</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Groups_in_Survey__c</fullName>
        <description>How many question groups are there in this scorecard type.</description>
        <inlineHelpText>How many question groups are there in this scorecard type.</inlineHelpText>
        <label>Groups in Scorecard</label>
        <summaryForeignKey>QwikScore_Question_Group__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IsValid__c</fullName>
        <formula>IF(  AND( Groups_in_Survey__c  =  Valid_Groups__c ,Total_Group_Weight__c = 1), &quot;True&quot;, &quot;False!&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Score__c</fullName>
        <label>Max Score</label>
        <summarizedField>QwikScore_Scorecard__c.Final_Score__c</summarizedField>
        <summaryFilterItems>
            <field>QwikScore_Scorecard__c.Scored__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QwikScore_Scorecard__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Min_Score__c</fullName>
        <label>Min Score</label>
        <summarizedField>QwikScore_Scorecard__c.Final_Score__c</summarizedField>
        <summaryFilterItems>
            <field>QwikScore_Scorecard__c.Scored__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QwikScore_Scorecard__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Questions_in_Survey__c</fullName>
        <description>How many questions are in this scorecard type?</description>
        <inlineHelpText>How many questions are in this scorecard type?</inlineHelpText>
        <label>Questions in Scorecard</label>
        <summarizedField>QwikScore_Question_Group__c.Questions_in_Group__c</summarizedField>
        <summaryForeignKey>QwikScore_Question_Group__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SQL_Id__c</fullName>
        <externalId>true</externalId>
        <label>SQL Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Survey_Description__c</fullName>
        <description>What is the scorecard about?</description>
        <inlineHelpText>What is the scorecard about?</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TotalScore__c</fullName>
        <label>TotalScore</label>
        <summarizedField>QwikScore_Scorecard__c.Final_Score__c</summarizedField>
        <summaryFilterItems>
            <field>QwikScore_Scorecard__c.Scored__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QwikScore_Scorecard__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Completion_Percent__c</fullName>
        <description>The total percent of all group weights (used for calculating scorecard progress completion)</description>
        <inlineHelpText>The total percent of all group weights (used for calculating scorecard progress completion)</inlineHelpText>
        <label>Total Completion Percent</label>
        <summarizedField>QwikScore_Question_Group__c.Total_Question_Weight__c</summarizedField>
        <summaryForeignKey>QwikScore_Question_Group__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Group_Weight__c</fullName>
        <description>How much do all the created groups weights add up to? Should be 100% for a completed scorecard</description>
        <inlineHelpText>How much do all the created groups weights add up to? Should be 100% for a completed scorecard</inlineHelpText>
        <label>Total Group Weight</label>
        <summarizedField>QwikScore_Question_Group__c.Group_Weight__c</summarizedField>
        <summaryForeignKey>QwikScore_Question_Group__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Valid_Groups__c</fullName>
        <description>The rollup number of groups marked as valid.</description>
        <inlineHelpText>The rollup number of groups marked as valid.</inlineHelpText>
        <label>Valid Groups</label>
        <summaryFilterItems>
            <field>QwikScore_Question_Group__c.IsValid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QwikScore_Question_Group__c.QwikScore_Survey__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Scorecard Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IsValid__c</columns>
        <columns>Active__c</columns>
        <columns>Groups_in_Survey__c</columns>
        <columns>Questions_in_Survey__c</columns>
        <columns>SQL_Id__c</columns>
        <columns>Survey_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scorecard Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_exceed_100_total_group_weight</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Group_Weight__c   &gt; 100</errorConditionFormula>
        <errorMessage>You cannot exceed 100% for the total group weight of a scorecard. Please reduce the weight of associated groups to total 100%.</errorMessage>
    </validationRules>
</CustomObject>